hphp/hack/test/typecheck/inout/bad_inout_use_arg18.php.exp
File "bad_inout_use_arg18.php", line 7, characters 11-19:
Expected argument marked inout to be contained in a local or a value-typed container (e.g. vec, dict, keyset, array). To use inout here, assign to/from a temporary local variable. (Typing[4208])
File "bad_inout_use_arg18.php", line 6, characters 12-12:
This is an object; this class name is unknown to Hack
